--- a/package.json
+++ b/package.json
@@ -28,18 +28,18 @@
     "@blitzjs/auth": "2.2.2",
     "@blitzjs/next": "2.2.2",
     "@blitzjs/rpc": "2.2.2",
-    "@prisma/client": "5.4.2",
+    "@hookform/error-message": "2.0.1",
+    "@hookform/resolvers": "2.9.11",
+    "@prisma/client": "5.7.0",
     "blitz": "2.2.2",
     "formik": "2.4.5",
     "next": "15.0.1",
-    "prisma": "5.4.2",
+    "prisma": "5.7.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "secure-password": "4.0.0",
-    "zod": "3.23.8",
     "react-hook-form": "7.62.0",
-    "@hookform/resolvers": "2.9.11",
-    "@hookform/error-message": "2.0.1"
+    "secure-password": "4.0.0",
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@next/env": "13.4.19",
